[https://bazys.atlassian.net/browse/BH-1723]: Remove http option
