# pkg/api/motivation/service.pb.go
@@ -1,13 +1,12 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.36.11
-// 	protoc        v6.33.4
+// 	protoc        v7.34.0
 // source: motivation/service.proto
 
 package motivation
 
 import (
-	_ "google.golang.org/genproto/googleapis/api/annotations"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	emptypb "google.golang.org/protobuf/types/known/emptypb"
@@ -1430,7 +1429,7 @@ var File_motivation_service_proto protoreflect.FileDescriptor
 const file_motivation_service_proto_rawDesc = "" +
 	"\n" +
 	"\x18motivation/service.proto\x12\n" +
-	"motivation\x1a\x1cgoogle/api/annotations.proto\x1a\x1bgoogle/protobuf/empty.proto\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1egoogle/protobuf/wrappers.proto\"\x82\x02\n" +
+	"motivation\x1a\x1bgoogle/protobuf/empty.proto\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1egoogle/protobuf/wrappers.proto\"\x82\x02\n" +
 	"\fBaseCriteria\x12\x0e\n" +
 	"\x02id\x18\x01 \x01(\x03R\x02id\x12\x12\n" +
 	"\x04name\x18\x02 \x01(\tR\x04name\x12 \n" +
@@ -1547,20 +1546,20 @@ const file_motivation_service_proto_rawDesc = "" +
 	"\x0eUserPercentage\x12!\n" +
 	"\fbase_percent\x18\x01 \x01(\x01R\vbasePercent\x12)\n" +
 	"\x10absolute_percent\x18\x02 \x01(\x01R\x0fabsolutePercent\x12#\n" +
-	"\rtotal_percent\x18\x03 \x01(\x01R\ftotalPercent2\xd6\v\n" +
+	"\rtotal_percent\x18\x03 \x01(\x01R\ftotalPercent2\xa7\b\n" +
 	"\n" +
-	"Motivation\x12o\n" +
-	"\x10ListBaseCriteria\x12\x16.google.protobuf.Empty\x1a\x1c.motivation.BaseCriteriaList\"%\x82\xd3\xe4\x93\x02\x1f\x12\x1d/api/motivation/base_criteria\x12\x7f\n" +
-	"\x12CreateBaseCriteria\x12%.motivation.CreateBaseCriteriaRequest\x1a\x18.motivation.BaseCriteria\"(\x82\xd3\xe4\x93\x02\":\x01*\"\x1d/api/motivation/base_criteria\x12\x84\x01\n" +
-	"\x12UpdateBaseCriteria\x12%.motivation.UpdateBaseCriteriaRequest\x1a\x18.motivation.BaseCriteria\"-\x82\xd3\xe4\x93\x02':\x01*\x1a\"/api/motivation/base_criteria/{id}\x12u\n" +
-	"\x16ListPerformancePeriods\x12\x16.google.protobuf.Empty\x1a\".motivation.PerformancePeriodsList\"\x1f\x82\xd3\xe4\x93\x02\x19\x12\x17/api/motivation/periods\x12\x88\x01\n" +
-	"\x17UpsertPerformancePeriod\x12*.motivation.UpsertPerformancePeriodRequest\x1a\x1d.motivation.PerformancePeriod\"\"\x82\xd3\xe4\x93\x02\x1c:\x01*\x1a\x17/api/motivation/periods\x12\x8c\x01\n" +
-	"\x17ListPerformanceCriteria\x12*.motivation.ListPerformanceCriteriaRequest\x1a#.motivation.PerformanceCriteriaList\" \x82\xd3\xe4\x93\x02\x1a\x12\x18/api/motivation/criteria\x12\x8f\x01\n" +
-	"\x19CreatePerformanceCriteria\x12,.motivation.CreatePerformanceCriteriaRequest\x1a\x1f.motivation.PerformanceCriteria\"#\x82\xd3\xe4\x93\x02\x1d:\x01*\"\x18/api/motivation/criteria\x12\x94\x01\n" +
-	"\x19UpdatePerformanceCriteria\x12,.motivation.UpdatePerformanceCriteriaRequest\x1a\x1f.motivation.PerformanceCriteria\"(\x82\xd3\xe4\x93\x02\":\x01*\x1a\x1d/api/motivation/criteria/{id}\x12\x86\x01\n" +
-	"\x15UpsertUserPerformance\x12(.motivation.UpsertUserPerformanceRequest\x1a\x1b.motivation.UserPerformance\"&\x82\xd3\xe4\x93\x02 :\x01*\x1a\x1b/api/motivation/performance\x12\x83\x01\n" +
-	"\x13ListUserPerformance\x12&.motivation.ListUserPerformanceRequest\x1a\x1f.motivation.UserPerformanceList\"#\x82\xd3\xe4\x93\x02\x1d\x12\x1b/api/motivation/performance\x12\x85\x01\n" +
-	"\x17CalculateUserPercentage\x12*.motivation.CalculateUserPercentageRequest\x1a\x1a.motivation.UserPercentage\"\"\x82\xd3\xe4\x93\x02\x1c\x12\x1a/api/motivation/percentageB3Z1github.com/SOTBI-LLC/sotbi.lib/pkg/api/motivationb\x06proto3"
+	"Motivation\x12H\n" +
+	"\x10ListBaseCriteria\x12\x16.google.protobuf.Empty\x1a\x1c.motivation.BaseCriteriaList\x12U\n" +
+	"\x12CreateBaseCriteria\x12%.motivation.CreateBaseCriteriaRequest\x1a\x18.motivation.BaseCriteria\x12U\n" +
+	"\x12UpdateBaseCriteria\x12%.motivation.UpdateBaseCriteriaRequest\x1a\x18.motivation.BaseCriteria\x12T\n" +
+	"\x16ListPerformancePeriods\x12\x16.google.protobuf.Empty\x1a\".motivation.PerformancePeriodsList\x12d\n" +
+	"\x17UpsertPerformancePeriod\x12*.motivation.UpsertPerformancePeriodRequest\x1a\x1d.motivation.PerformancePeriod\x12j\n" +
+	"\x17ListPerformanceCriteria\x12*.motivation.ListPerformanceCriteriaRequest\x1a#.motivation.PerformanceCriteriaList\x12j\n" +
+	"\x19CreatePerformanceCriteria\x12,.motivation.CreatePerformanceCriteriaRequest\x1a\x1f.motivation.PerformanceCriteria\x12j\n" +
+	"\x19UpdatePerformanceCriteria\x12,.motivation.UpdatePerformanceCriteriaRequest\x1a\x1f.motivation.PerformanceCriteria\x12^\n" +
+	"\x15UpsertUserPerformance\x12(.motivation.UpsertUserPerformanceRequest\x1a\x1b.motivation.UserPerformance\x12^\n" +
+	"\x13ListUserPerformance\x12&.motivation.ListUserPerformanceRequest\x1a\x1f.motivation.UserPerformanceList\x12a\n" +
+	"\x17CalculateUserPercentage\x12*.motivation.CalculateUserPercentageRequest\x1a\x1a.motivation.UserPercentageB3Z1github.com/SOTBI-LLC/sotbi.lib/pkg/api/motivationb\x06proto3"
 
 var (
 	file_motivation_service_proto_rawDescOnce sync.Once
